--- a/deli/src/main/res/layout/activity_setting.xml
+++ b/deli/src/main/res/layout/activity_setting.xml
@@ -88,8 +88,15 @@
         android:id="@+id/rc_setting"
         android:layout_marginTop="@dimen/dp_40"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
        />
+
+    <TextView
+        android:id="@+id/tv_state"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_30"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 </android.support.constraint.ConstraintLayout>
