--- a/deli/src/main/res/values/styles.xml
+++ b/deli/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
 
 
     <!-- 全屏style -->
-    <style name="MyDialog" parent="@android:style/Theme.NoTitleBar.Fullscreen">
+    <style name="fullrSceenMyDialog" parent="@android:style/Theme.NoTitleBar.Fullscreen">
         <!-- 是否有边框 -->
         <item name="android:windowFrame">@null</item>
         <!--是否在悬浮Activity之上  -->
@@ -21,5 +21,15 @@
 
         <item name="android:windowFullscreen">true</item>
 
+    </style>
+
+
+
+    <style name="nomalDialog" parent="@android:style/Theme.Holo.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 </resources>
